syntax = "proto3";

package vou.proto;

import "game/rpc_answer_question.proto";

option go_package = "VOU-Server/proto/gen";

service GameService {
  rpc AnswerQuestion(stream AnswerQuestionRequest) returns (stream AnswerQuestionResponse) {}
}
